# contrast_agent_simulation

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: CxxStandardSettings.cmake  StandardSettings.cmake  UnixSpecials.cmake
configured_files/: CMakeLists.txt  config.hpp.in
include/: mptmacros.h
ini/: Bimodal_Lognormal_Radius_Example.txt  DLS_File_Example.txt  DenseAggregate_Example.txt  Lognormal_Radius_Example.txt  Lognormal_Radius_T2_backgroundT2_Example.txt  Magnetic_Moment_Example.txt  Spherical_Aggregate_T2_Example.txt
src/: CMakeLists.txt
src/ionp/: Aggregate.cpp  Aggregate.hpp  CMakeLists.txt  Data.cpp  Data.hpp  Ionp.cpp  Ionp.hpp  MRsequence.cpp  MRsequence.hpp  Particle.cpp  Particle.hpp  Point3D.cpp  Point3D.hpp  Proton.cpp  Proton.hpp  RandNumberBetween.hpp  RandomList.cpp  RandomList.hpp  SimMatrix.cpp  SimMatrix.hpp  SimSpace.cpp  SimSpace.hpp  Vector3D.cpp  Vector3D.hpp  main.cpp
